Changin name app

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8" />
@@ -20,11 +20,18 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
-<link rel="stylesheet" href="styles.0ad6ec85e55caff0de81.css"></head>
+  <link rel="stylesheet" href="styles.0ad6ec85e55caff0de81.css">
+</head>
 
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime-es2015.9c05c7964b3db1dcc7cc.js" type="module"></script><script src="runtime-es5.9c05c7964b3db1dcc7cc.js" nomodule defer></script><script src="polyfills-es5.bc94782d555d8c7e05a6.js" nomodule defer></script><script src="polyfills-es2015.f95ec80d8f0d290cc1fc.js" type="module"></script><script src="main-es2015.58b52cd10bf2cfe8f6d1.js" type="module"></script><script src="main-es5.58b52cd10bf2cfe8f6d1.js" nomodule defer></script></body>
+  <script src="runtime-es2015.9c05c7964b3db1dcc7cc.js" type="module"></script>
+  <script src="runtime-es5.9c05c7964b3db1dcc7cc.js" nomodule defer></script>
+  <script src="polyfills-es5.bc94782d555d8c7e05a6.js" nomodule defer></script>
+  <script src="polyfills-es2015.f95ec80d8f0d290cc1fc.js" type="module"></script>
+  <script src="main-es2015.58b52cd10bf2cfe8f6d1.js" type="module"></script>
+  <script src="main-es5.58b52cd10bf2cfe8f6d1.js" nomodule defer></script>
+</body>
 
 </html>
